@@ -7,40 +7,13 @@ function PlanetsLib:planet_extend(configs)
     for _, config in ipairs(configs) do
         PlanetsLib.verify_config_fields(config)
 
-        local distance, orientation = nil
-        local orbit = config.orbit
-        if orbit.parent == "star" then
-            distance = orbit.distance
-            orientation = orbit.orientation
-        else
-            local parent = data.raw.planet[orbit.parent]
-            local parent_distance = parent.distance
-            local parent_orientation = parent.orientation
-
-            local parent_angle = parent_orientation * 2 * math.pi
-            local orbit_angle = orbit.orientation * 2 * math.pi
-
-            local px = parent_distance * math.cos(parent_angle)
-            local py = parent_distance * math.sin(parent_angle)
-            local ox = orbit.distance * math.cos(orbit_angle)
-            local oy = orbit.distance * math.sin(orbit_angle)
-
-            local x = px + ox
-            local y = py + oy
-
-            distance = math.sqrt(x * x + y * y)
-            orientation = math.atan2(y, x) / (2 * math.pi)
-            if orientation < 0 then orientation = orientation + 1 end
-            if orientation > 1 then orientation = orientation - 1 end
-        end
-
         local planet = {
-            distance = distance,
-            orientation = orientation,
             label_orientation = config.orbit.label_orientation,
         }
 
-        for k, v in pairs(config) do
+        PlanetsLib.set_position_from_orbit(planet, config.orbit)
+
+        for k, v in pairs(config) do -- This will not include distance, orientation due to validity checks.
             planet[k] = v
         end
 
@@ -53,6 +26,33 @@ function PlanetsLib:planet_extend(configs)
 
     data:extend(planets)
     return planets
+end
+
+function PlanetsLib.set_position_from_orbit(planet, orbit)
+    if orbit.parent == "star" then
+        planet.distance = orbit.distance
+        planet.orientation = orbit.orientation
+    else
+        local parent = data.raw.planet[orbit.parent]
+        local parent_distance = parent.distance
+        local parent_orientation = parent.orientation
+
+        local parent_angle = parent_orientation * 2 * math.pi
+        local orbit_angle = orbit.orientation * 2 * math.pi
+
+        local px = parent_distance * math.cos(parent_angle)
+        local py = parent_distance * math.sin(parent_angle)
+        local ox = orbit.distance * math.cos(orbit_angle)
+        local oy = orbit.distance * math.sin(orbit_angle)
+
+        local x = px + ox
+        local y = py + oy
+
+        planet.distance = math.sqrt(x * x + y * y)
+        planet.orientation = math.atan2(y, x) / (2 * math.pi)
+        if planet.orientation < 0 then planet.orientation = planet.orientation + 1 end
+        if planet.orientation > 1 then planet.orientation = planet.orientation - 1 end
+    end
 end
 
 function PlanetsLib.verify_config_fields(config)
