@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: ????
-  Changes:
+  Modding:
+    - Compatibility with Organized Solar System.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2024-12-30
